<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/gridSetupComplete"
        android:icon="@drawable/ic_settings_input_component_red_24dp"
        android:title="@string/grid_setup_complete"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/currentLocationAvail"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/location_available"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/aisPacketAvail"
        android:icon="@drawable/ic_wifi_black_24dp"
        android:title="@string/ais_data_available"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_text"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/discard_point"
        android:visible="false"/>

    <item
        android:id="@+id/changeLatLonFormat"
        android:title="@string/latLonChangeFormat"
        android:icon="@drawable/ic_transform_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/aboutUs"
        android:title="@string/about_us"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <!--
    <item
        android:id="@+id/action_email"
        android:icon="@drawable/ic_email"
        android:title="Email" /> -->


</menu>