<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/background_bg"
    android:gravity="center">


    <android.support.v7.widget.CardView
        android:id="@+id/normalDialog_View"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/transparentBlack"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:id="@+id/dialogIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_done_all_black_24dp"/>

                <TextView
                    android:id="@+id/validationFailed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/validationFailedMsg"/>

                <TextView
                    android:id="@+id/stationRemoved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/stationRemovedMsg"/>


                <Button
                    android:id="@+id/validationDialogOkBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/dialogOK"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:id="@+id/aboutUs_View"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/about_us_app_name"/>

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/about_us_version"/>

            <TextView
                android:id="@+id/appDevelopedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/about_us_developed_by"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/developerName1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/about_us_developer_1"/>

                <TextView
                    android:id="@+id/developerEmail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/about_us_developer_1_email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/developerName2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/about_us_developer_2"/>

                <TextView
                    android:id="@+id/developerEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/about_us_developer_2_email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/developedFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/about_us_developed_for"/>

            <TextView
                android:id="@+id/buildOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/about_us_built_on"/>

            <TextView
            android:id="@+id/androidVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/about_us_android_version"/>

            <TextView
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/about_us_quote"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>