<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background_bg"
    tools:context=".RecoveryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aisStation"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:layout_marginEnd="15dp"
                android:textColor="@color/white"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/withAIS"
                android:id="@+id/RadioSelect">
                <RadioButton
                    android:id="@+id/withAIS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesChoice"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/withoutAIS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noChoice"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mmsiLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/devicesOptionSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/mmsi"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/devicesOptionSelectedValue_id"
                android:layout_width="500dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/confirm_Button_config"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:onClick="onClickRecoveryListenerconfirm"
            android:text="@string/confirmBtn"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>